@@ -14,6 +14,9 @@
    - jmc@cvs.openbsd.org 2005/12/31 13:45:19
      [ssh.1]
      .Nm does not require an argument;
+   - stevesk@cvs.openbsd.org 2006/01/01 08:59:27
+     [includes.h misc.c]
+     move <net/if.h>; ok djm@
 
 20060101
  - (djm) [Makefile.in configure.ac includes.h misc.c]
@@ -3604,4 +3607,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.4066 2006/01/02 12:38:37 djm Exp $
+$Id: ChangeLog,v 1.4067 2006/01/02 12:40:10 djm Exp $
